@@ -16,7 +16,7 @@ HOME ON THE NET
 ---------------
 
 The project it hosted at sourceforge. You can find the latest release of the
-`ezV24' library at http://libezV24.sourceforge.net/. If you have some
+`ezV24' library at http://ezv24.sourceforge.net/. If you have some
 questions, feel free to write me an email <jdesch@users.sourceforge.net>. To
 ease the mail handling, please put a [ezV24] into the subject line of the
 mail.
@@ -29,9 +29,12 @@ To install the libary, just unpack the archive (you may have done this ;) and
 execute the following steps:
 
 (1) compile the library by typing `make'. The result should be a executable
-    shared library named `libezV24.so.*'.
+    shared library named `libezV24.so.*' and the sample `test-v24'.
 
     $ make
+
+    To see what `test-v24' do, you must have a look into the source code.
+
 
 (2) become root and install the library and the header files. This call will
     update you ldd-cache too! Note that this doen's install the html
@@ -46,14 +49,6 @@ execute the following steps:
     this case, you should add /usr/local/lib to /etc/ld.so.conf before
     calling `make install'!
 
-
-(3) Now you have the `ezV24'-library installed. The last (optional) step is
-    to compile the sample program.
-
-    $ make test-v24
-
-    The result is a small executable `test-v24'. To see what `test-v24' do,
-    you must have a look into the source code.
 
 
 UPDATE
